--- a/Tienda.html
+++ b/Tienda.html
@@ -116,8 +116,10 @@
     <div class="card-body">
       <h5 class="card-title, text-center">Arena Concreto Ensacado</h5>
      <hr>
-      <h6 class="text-center">$25.000 UND</h6>
-      <div align="center"><button type="button" class="btn btn-primary btn-sm btn-block" data-toggle="popover" data-placement="right" title="Descripcion" data-content="Tipo: Cemento Gris. Para la construcción, remodelación y reparación de baños, cocinas, piscinas y todo tipo de terminados domésticos entre los que se destacan los pigmentados, texturizados, y estampados. Producción de concretos para cimentaciones, muros, contenciones, estructuras, rellenos y todo tipo de obra en general.">Ver detalles</button></div>
+      <h6 class="text-center">$16.800 <small class="text-muted"><b>UND</b></small></h6>
+      <div align="center"><button type="button" class="btn btn-primary btn-sm btn-block" data-toggle="popover" data-placement="right" title=    "Descripcion" data-content="Tipo: Arena Concreto Ensacado
+          Material: Arena
+          Uso: Arena Concreto Ensacado">Ver detalles</button></div>
     </div>
     <div class="card-footer">
       <small class="text-muted">Last updated 3 mins ago</small>
@@ -128,8 +130,10 @@
     <div class="card-body">
       <h5 class="card-title, text-center">Gravilla</h5>
       <hr>
-      <h6 class="text-center">$25.000 UND</h6>
-      <div align="center"><button type="button" class="btn btn-primary btn-sm btn-block" data-toggle="popover" data-placement="right" title="Descripcion" data-content="Tipo: Cemento Gris. Para la construcción, remodelación y reparación de baños, cocinas, piscinas y todo tipo de terminados domésticos entre los que se destacan los pigmentados, texturizados, y estampados. Producción de concretos para cimentaciones, muros, contenciones, estructuras, rellenos y todo tipo de obra en general.">Ver detalles</button></div>
+      <h6 class="text-center">$17.200 <small class="text-muted"><b>UND</b></small></h6>
+      <div align="center"><button type="button" class="btn btn-primary btn-sm btn-block" data-toggle="popover" data-placement="right" title=  "Descripcion" data-content="Tipo: Mixto Ensacado
+        Material: Mixto
+        Uso: Mixto Ensacado">Ver detalles</button></div>
     </div>
     <div class="card-footer">
       <small class="text-muted">Last updated 3 mins ago</small>
@@ -146,8 +150,8 @@
     <div class="card-body">
       <h5 class="card-title, text-center">Ladrillo</h5>
       <hr>
-      <h6 class="text-center">$25.000 UND</h6>
-      <div align="center"><button type="button" class="btn btn-primary btn-sm btn-block" data-toggle="popover" data-placement="right" title="Descripcion" data-content="Tipo: Cemento Gris. Para la construcción, remodelación y reparación de baños, cocinas, piscinas y todo tipo de terminados domésticos entre los que se destacan los pigmentados, texturizados, y estampados. Producción de concretos para cimentaciones, muros, contenciones, estructuras, rellenos y todo tipo de obra en general.">Ver detalles</button></div>
+      <h6 class="text-center">$700 <small class="text-muted"><b>UND</b></small></h6>
+      <div align="center"><button type="button" class="btn btn-primary btn-sm btn-block" data-toggle="popover" data-placement="right" title="Descripcion" data-content="Dimensiones: 15x20x12cm">Ver detalles</button></div>
     </div>
     <div class="card-footer">
       <small class="text-muted">Last updated 3 mins ago</small>
@@ -158,8 +162,8 @@
     <div class="card-body">
       <h5 class="card-title, text-center">Ladrillo Prensado Liviano</h5>
       <hr>
-      <h6 class="text-center">$25.000 UND</h6>
-      <div align="center"><button type="button" class="btn btn-primary btn-sm btn-block" data-toggle="popover" data-placement="right" title="Descripcion" data-content="Tipo: Cemento Gris. Para la construcción, remodelación y reparación de baños, cocinas, piscinas y todo tipo de terminados domésticos entre los que se destacan los pigmentados, texturizados, y estampados. Producción de concretos para cimentaciones, muros, contenciones, estructuras, rellenos y todo tipo de obra en general.">Ver detalles</button></div>
+      <h6 class="text-center">$1.300 <small class="text-muted"><b>UND</b></small></h6>
+      <div align="center"><button type="button" class="btn btn-primary btn-sm btn-block" data-toggle="popover" data-placement="right" title="Descripcion" data-content="Portante prensado de alta calidad totalmente reforzado apropiado para cualquier tipo de construcción. Dimensiones: 29 x 14,5 x 9 cm">Ver detalles</button></div>
     </div>
     <div class="card-footer">
       <small class="text-muted">Last updated 3 mins ago</small>
@@ -170,8 +174,8 @@
     <div class="card-body">
       <h5 class="card-title, text-center">Pintura Kolor Interiores</h5>
       <hr>
-      <h6 class="text-center">$25.000 UND</h6>
-      <div align="center"><button type="button" class="btn btn-primary btn-sm btn-block" data-toggle="popover" data-placement="right" title="Descripcion" data-content="Tipo: Cemento Gris. Para la construcción, remodelación y reparación de baños, cocinas, piscinas y todo tipo de terminados domésticos entre los que se destacan los pigmentados, texturizados, y estampados. Producción de concretos para cimentaciones, muros, contenciones, estructuras, rellenos y todo tipo de obra en general.">Ver detalles</button></div>
+      <h6 class="text-center">$114.900 <small class="text-muted"><b>UND</b></small></h6>
+      <div align="center"><button type="button" class="btn btn-primary btn-sm btn-block" data-toggle="popover" data-placement="right" title="Descripcion" data-content="Producto en dos componentes que al mezclarse en proporciones adecuadas produce una película con muy buena adherencia y flexibilidad, recomendada para utilizarse en paredes interiores.">Ver detalles</button></div>
     </div>
     <div class="card-footer">
       <small class="text-muted">Last updated 3 mins ago</small>
