--- a/servicios.html
+++ b/servicios.html
@@ -236,7 +236,7 @@
     <div class="shadow-lg p-3 mb-5 bg-white rounded">
     <div class="jumbotron jumbotron-white" style="background-color:white">
       <div class="container">
-        <h1 class="display-4">ServiSolutions</h1>
+        <h1 class="display-4 text-center">ServiSolutions</h1>
           <p class="lead">Si de reparaciones se trata, estamos a tu servicio.</p>
       
         <div class="container-fluid" style="background-color:white">
