--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 </div>
                 <div class="col-lg-4"  style="background-color:white">
                   <h5 class="text-center"><a href="sobre nosotros.html" class="text-dark">Nuestro Equipo</a></h5>
-                    <div align="center"><a href="sobre nosotros.html"><img src="images/Equipo.jpeg" whidt="150px" height="140px" alt="..." class="rounded-circle"></a></div>
+                    <div align="center"><a href="sobre nosotros.html"><img src="images/equipotrabajo.jpg" whidt="150px" height="150px" alt="..." class="rounded-circle"></a></div>
                 </div>
               </div>
               </div>
