--- a/servicios.html
+++ b/servicios.html
@@ -163,39 +163,9 @@
         <option>Servicio De Reparación De Humedades y Goteras</option>
         <option>Servicio de Soldadura</option>
             </select>
+<br>
+            <input type="date" class="form-control" placeholder="Ingresa el día" id="fecha" onclick="dias()">
         </form><br>
-
-
-
- <div class="form-row">
-    <div class="col-md-6 mb-3">
-      <select class="custom-select"  id="mes" onclick="selectmes()" required>
-        <option selected disabled value="">Mes</option>
-        <option>Enero</option>
-        <option>Febrero</option>
-        <option>Marzo</option>
-        <option>Abril</option>
-        <option>Mayo</option>
-        <option>Junio</option>
-        <option>Julio</option>
-        <option>Agosto</option>
-        <option>Septiembre</option>
-        <option>Octubre</option>
-        <option>Noviembre</option>
-        <option>Diciembre</option>
-      </select>
-      <div class="invalid-feedback">
-        Please select a valid state.
-      </div>
-    </div>
-    <div class="col-md-6 mb-3">
-      <input type="text" class="form-control" placeholder="Ingresa el día" id="dia" onclick="dias()">
-    </div>
-  </div>
-
-
-
-
 
 
         <div align="center"><button type="button" class="btn btn-primary btn-lg" id="click" onclick="select()">Solicitar</button></div>
