--- a/sobre nosotros.html
+++ b/sobre nosotros.html
@@ -15,8 +15,8 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-  <a href="index.html"><img src="images/logo.png" width="30" height="30" class="rounded-circle" alt=""></a> <p>&nbsp,&nbsp</p>
-  <a class="navbar-brand" href="index.html"><b>ServiSolutions</b></a>
+  <a href="index.php"><img src="images/logo.png" width="30" height="30" class="rounded-circle" alt=""></a> <p>&nbsp,&nbsp</p>
+  <a class="navbar-brand" href="index.php"><b>ServiSolutions</b></a>
   
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
